--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ag-grid-enterprise": "^25.2.1",
     "ag-grid-react": "^25.2.0",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
