--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "proxy": "http://192.168.1.27:80",
   "dependencies": {
+    "@date-io/date-fns": "^2.10.11",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.28",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "ag-grid-community": "^25.2.1",
     "ag-grid-enterprise": "^25.2.1",
     "ag-grid-react": "^25.2.0",
+    "date-fns": "^2.21.3",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-dom": "^17.0.2",
